Fix btn icon spacing by requireing span for text

--- a/assets/less/sugar/elements/buttons.less
+++ b/assets/less/sugar/elements/buttons.less
@@ -68,7 +68,7 @@
 /**
  * Button Icon spacings
  */
-.btn .icon      { .margin-right(@quarter-spacing-unit); }
+.btn span      { .margin-left(@quarter-spacing-unit); }
 
 /**
  * Button Wide
